--- a/src/about.html
+++ b/src/about.html
@@ -178,15 +178,15 @@
                 <ul class="space-y-2">
                     <li><a href="index.html" class="hover:text-gray-300">Home</a></li>
                     <li><a href="about.html" class="hover:text-gray-300">About</a></li>
-                    <li><a href="portfolio.html" class="hover:text-gray-300">Project</a></li>
+                    <li><a href="project.html" class="hover:text-gray-300">Project</a></li>
                 </ul>
             </div>
         
             <!-- คอลัมน์ที่ 2 -->
             <div class="p-2">
                 <ul class="space-y-2">
-                    <li><a href="portfolio.html" class="hover:text-gray-300">Services</a></li>
-                    <li><a href="portfolio.html" class="hover:text-gray-300">Contact</a></li>
+                    <li><a href="services.html" class="hover:text-gray-300">Services</a></li>
+                    <li><a href="contact.html" class="hover:text-gray-300">Contact</a></li>
                 </ul>
             </div>
         </div>
