--- a/src/project.html
+++ b/src/project.html
@@ -83,7 +83,7 @@
                                 <h3 class="text-xl font-semibold text-white">Basic html -food menu</h3>
                                 <p class="text-white text-sm my-2">เมนูอาหาร </p>
                                 <div class="mt-4">
-                                    <a href="about.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
+                                    <a href="../exercises/ex1Menu.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
                                 </div>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                             <h3 class="text-xl font-semibold text-white">Form-Student Registration</h3>
                             <p class="text-white text-sm my-2">แบบฟอร์มลงทะเบียนศิษย์เก่า</p>
                             <div class="mt-4">
-                                <a href="about.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition bg-yellow-500">View Project!!</a>
+                                <a href="../exercises/ex2From.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition bg-yellow-500">View Project!!</a>
                             </div>
                         </div>
                             <img src="https://st.depositphotos.com/2904097/5102/v/450/depositphotos_51028307-stock-illustration-vector-checklist-and-nib-pen.jpg" alt="Project 1" class="rounded-xl w-60 h-55 mx-10 my-5  hidden md:block">
@@ -120,7 +120,7 @@
                         <h3 class="text-xl font-semibold text-white">Box Model -music equipment store</h3>
                         <p class="text-white text-sm my-2">ร้านอุปกรณ์ดนตรี </p>
                         <div class="mt-4">
-                            <a href="about.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
+                            <a href="../exercises/ex3boxmodel.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <h3 class="text-xl font-semibold text-white">Page layout - Beautiful food menu</h3>
                         <p class="text-white text-sm my-2">เมนูอาหารสวยงาม</p>
                         <div class="mt-4">
-                            <a href="about.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
+                            <a href="../exercises/ex4MenuWithCss.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
                         </div>
                     </div>
                         <img src="https://s359.kapook.com/r/600/auto/pagebuilder/bfc6a9f5-2465-4c9b-84dc-d090e6b78d85.jpg" alt="Project 1" class="rounded-xl w-80 h-55 mx-10  my-5 hidden md:block">
@@ -157,7 +157,7 @@
                         <h3 class="text-xl font-semibold text-white">Basic html - Basic html (เมนูอาหาร)</h3>
                         <p class="text-white text-sm my-2">เขียนเมนูอาหารโดยใช้ html </p>
                         <div class="mt-4">
-                            <a href="about.html" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
+                            <a href="" class="text-white border border-white px-6 py-2 rounded-full hover:bg-white hover:text-black transition  bg-yellow-500">View Project!!</a>
                         </div>
                     </div>
                 </div>
@@ -184,13 +184,13 @@
             <div class="p-2">
                 <ul class="space-y-2">
                     <li><a href="services.html" class="hover:text-gray-300">Services</a></li>
-                    <li><a href="contace.html" class="hover:text-gray-300">Contact</a></li>
+                    <li><a href="contact.html" class="hover:text-gray-300">Contact</a></li>
                 </ul>
             </div>
         </div>
         
 
-        <!-- Add friends on Line -->
+      
         <div class="text-center">
             <h3 class="text-lg font-semibold">Add me on Line</h3>
             <img src="https://scontent.fbkk12-2.fna.fbcdn.net/v/t39.30808-6/477731822_1657252508202141_6196973549631178662_n.jpg?stp=cp6_dst-jpg_p526x296_tt6&_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFqc3dWKIalL60kWfB7G3PAhecaFo8hbm2F5xoWjyFubS6ofpwql_FqAcFAXHp6gCI2fhrhk9smCiuhgl27F2Dd&_nc_ohc=M7gkpRbvmNoQ7kNvgGbXC4M&_nc_oc=AdiUksSWeQsG9CjJ55gSdb3MdzzqepjseIDqxR-Zs2cj-V8aFjDwDKUlAojLy5Vl5dc&_nc_zt=23&_nc_ht=scontent.fbkk12-2.fna&_nc_gid=AkUYy12n9PKoFZB7QD7qxPn&oh=00_AYBhyJRz8DVIAQXWtFSbMA5DUEL6UanlA5IQ6BGvAk_iiQ&oe=67B3D8C7" alt="Line Profile" class="w-16 h-16 mx-auto mt-2">
