--- a/src/services.html
+++ b/src/services.html
@@ -144,7 +144,7 @@
             <div class="p-2">
                 <ul class="space-y-2">
                     <li><a href="services.html" class="hover:text-gray-300">Services</a></li>
-                    <li><a href="contace.html" class="hover:text-gray-300">Contact</a></li>
+                    <li><a href="contact.html" class="hover:text-gray-300">Contact</a></li>
                 </ul>
             </div>
         </div>
