--- a/src/contact.html
+++ b/src/contact.html
@@ -55,45 +55,45 @@
         });
     </script>
 
-<div class="flex justify-center items-center min-h-screen bg-blue-100">
-<div class="max-w-4xl w-full bg-purple-300 text-white p-8 rounded-lg flex flex-col md:flex-row gap-8">
-    <!-- Left Side -->
-    <div class="md:w-1/2">
-        <h2 class="text-3xl font-bold">
-            Let’s <span class="text-green-400">Connect</span> & <span class="text-green-400">Collaborate</span>
-        </h2>
-        <p class="mt-2 text-gray-200">
-            “We are open to all types of contacts and cooperation. to create new opportunities and drive success together"
-        </p>
-        <div class="mt-6 space-y-4 mt-5">
-            <p class="flex items-center gap-2"><span>📞</span> 0954385710</p>
-            <p class="flex items-center gap-2"><span>📧</span>monthira.tapsaeng@gmail.com</p>
-            <p class="flex items-center gap-2"><span>📍</span> Prince of Songkla University, Surat Thani Campus
+    
 
-                32/29 Moo 9 Makhamtia
-                Muang, Surat Thani, 84000</p>
+<div class="flex justify-center items-center min-h-screen bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500">
+    <div class="max-w-4xl w-full bg-white text-gray-800 p-8 rounded-lg shadow-lg flex flex-col md:flex-row gap-8">
+        <!-- Left Side -->
+        <div class="md:w-1/2">
+            <h2 class="text-3xl font-bold text-center md:text-left">
+                Let's <span class="text-green-400">Connect</span> & <span class="text-green-400">Collaborate</span>
+            </h2>
+            <p class="mt-2 text-center md:text-left text-gray-600">
+                "We are open to all types of contacts and cooperation. Let's create new opportunities and drive success together."
+            </p>
+            <div class="mt-6 space-y-4">
+                <p class="flex items-center gap-2"><span>📞</span> 0954385710</p>
+                <p class="flex items-center gap-2"><span>📧</span> monthira.tapsaeng@gmail.com</p>
+                <p class="flex items-center gap-2"><span>📍</span> Prince of Songkla University, Surat Thani Campus
+                    <br>32/29 Moo 9 Makhamtia, Muang, Surat Thani, 84000
+                </p>
+            </div>
+        </div>
+
+        <!-- Right Side -->
+        <div class="md:w-1/2 bg-gradient-to-r from-purple-500 to-pink-500 p-6 rounded-lg">
+            <form class="space-y-4">
+                <div class="flex gap-4">
+                    <input type="text" placeholder="First Name *" class="w-1/2 p-3 bg-gray-100 text-gray-800 rounded-md outline-none placeholder-gray-400">
+                    <input type="text" placeholder="Last Name *" class="w-1/2 p-3 bg-gray-100 text-gray-800 rounded-md outline-none placeholder-gray-400">
+                </div>
+                <div class="flex gap-4">
+                    <input type="email" placeholder="Email *" class="w-1/2 p-3 bg-gray-100 text-gray-800 rounded-md outline-none placeholder-gray-400">
+                    <input type="text" placeholder="Phone Number *" class="w-1/2 p-3 bg-gray-100 text-gray-800 rounded-md outline-none placeholder-gray-400">
+                </div>
+                <input type="text" placeholder="Subject *" class="w-full p-3 bg-gray-100 text-gray-800 rounded-md outline-none placeholder-gray-400">
+                <textarea placeholder="Message *" rows="4" class="w-full p-3 bg-gray-100 text-gray-800 rounded-md outline-none placeholder-gray-400"></textarea>
+                <button class="w-full bg-green-400 text-black py-2 rounded-md hover:bg-green-500 transition">Send Message</button>
+            </form>
         </div>
     </div>
-
-    <!-- Right Side -->
-    <div class="md:w-1/2 bg-[#4E2DA5] p-6 rounded-lg">
-        <form class="space-y-4">
-            <div class="flex gap-4">
-                <input type="text" placeholder="First Name *" class="w-1/2 p-3 bg-[#7857D6] text-white rounded-md outline-none placeholder-gray-300">
-                <input type="text" placeholder="Last Name *" class="w-1/2 p-3 bg-[#7857D6] text-white rounded-md outline-none placeholder-gray-300">
-            </div>
-            <div class="flex gap-4">
-                <input type="email" placeholder="Email *" class="w-1/2 p-3 bg-[#7857D6] text-white rounded-md outline-none placeholder-gray-300">
-                <input type="text" placeholder="Phone Number *" class="w-1/2 p-3 bg-[#7857D6] text-white rounded-md outline-none placeholder-gray-300">
-            </div>
-            <input type="text" placeholder="Subject *" class="w-full p-3 bg-[#7857D6] text-white rounded-md outline-none placeholder-gray-300">
-            <textarea placeholder="Message *" rows="4" class="w-full p-3 bg-[#7857D6] text-white rounded-md outline-none placeholder-gray-300"></textarea>
-            <button class="w-full bg-green-400 text-black py-2 rounded-md hover:bg-green-500 transition">Send Message</button>
-        </form>
-    </div>
 </div>
-</div>
-
 
 
 <footer class="bg-purple-400 text-white text-sm py-5 px-4 md:px-20">
